# ccc

./: .env.example  .gitignore  .txt  0.HELLO-AI-START-HERE.md  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES.md  TERMINAL_COMPATIBILITY_GUIDE.md  cc  ccc  ccc_main.py  coverage.xml  package-lock.json  package.json  pyproject.toml  setup-status.md  setup.py  vitest.config.ts
.claude/: 2025-09-27_02-29.txt
.github/: README.md
.github/workflows/: ci.yml  debian-build.yml  release.yml
.local/config/: aliases.conf  user.json
.pybuild/cpython3_3.11_cccmd/: .pydistutils.cfg
ccc-commander/lib/: ccc_command_parser.py  ccc_commands.py  ccc_config_extended.py  ccc_ppa_upload.py  ccc_session_manager.py
ccc-commander/lib-from-ccc/: ccc_command_parser.py  ccc_commands.py  ccc_config_extended.py  ccc_debian_build.py  ccc_manager.py  ccc_ppa_upload.py  ccc_professional_build.py  ccc_role_security.py  ccc_single_build.py  ccc_upload_manager.py
ccc-commander/src/: ccc_main.py
ccc-controller/src/: cc_markdown_editor.py
cccmd.egg-info/: SOURCES.txt  requires.txt
config/: commands.yaml  config.json  defaults.json
config-json/global/: config.json
debian/: ccc.postinst.debhelper  ccc.prerm.debhelper  ccc.substvars  changelog  control  copyright  files  rules
docs/: GIT_COMMANDS.md  PPA_UPLOAD_GUIDE.md  chapter-9-backup-incident.md
install/: communicator.sh
lib/: ccc_claude.py  ccc_command_parser.py  ccc_commands.py  ccc_manager.py  ccc_ppa_upload.py  ccc_professional_build.py  ccc_ultimate_gpg_fix.py
node_modules.hidden/: .package-lock.json
readme/: CCC-SYSTEM-FOUNDATION.md  CC_EDITOR_README.md  CHANGELOG_0.3.3.md  CLAUDE.md  SESSION_SUMMARY_v0.3.2_Release.md  ccc-new_files.txt
reports/: bandit.json  safety.json
scripts/: build-deb.sh  build-debian-packages.sh  upload-to-reprepro.sh
src/cli/: index.ts  session-commands.ts
src/config/: safe-loader.ts  secrets.ts
src/session/: SimpleSessionManager.ts
src/types/: index.ts
tests/: __init__.py  conftest.py
(+34 files in other folders)
